# fava-classy-portfolio

./: .gitignore  __init__.py  readme.md  setup.cfg
fava_classy_portfolio/: __init__.py
templates/: FavaClassyPortfolio.html  _portfolio_table.html
